--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
-    "styled-components": "^5.3.6",
     "typescript": "4.9.3"
   },
   "devDependencies": {
@@ -34,6 +33,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest-environment-jsdom": "^29.3.1"
+    "jest-environment-jsdom": "^29.3.1",
+    "tailwindcss": "^3.2.4"
   }
 }
