--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
@@ -34,6 +35,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest-environment-jsdom": "^29.3.1",
+    "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
 }
